trying to fix bug with navbar Link on mobile

--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -113,7 +113,7 @@
     padding-bottom: 1.2rem;
   }
 
-  .container:first-child {
+  .container{
     padding-top: 6rem;
   }
 }
